# playwright_python_browseruse_ai_showcase

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: browser_agent.py
agents/playbooks/: saucedemo_checkout.yaml
ai/: providers.py
configs/: env.example  settings.toml
configs/baselines/: books_travel.json
flows/: books_flows.py  demoblaze_flows.py  internet_flows.py  parabank_flows.py  saucedemo_flows.py
pages/: books_home_page.py  demoblaze_home_page.py  internet_portal_pages.py  parabank_pages.py  saucedemo_cart_page.py  saucedemo_checkout_page.py  saucedemo_inventory_page.py  saucedemo_login_page.py
tests/: conftest.py
tests/api/countries/: test_graphql__query_by_code__tc_020.py
tests/api/reqres/: test_create_user__schema__tc_019.py
tests/web/books/: test_search__travel_pagination__tc_007.py  test_visual__travel_category_baseline__tc_012.py
tests/web/demoblaze/: test_agent__natural_language_filters__tc_017.py  test_cart__remove_recalculates__tc_006.py  test_offline__cart_error__tc_014.py  test_order__laptop_checkout__tc_005.py
tests/web/internet/: test_agent__recover_from_404__tc_016.py  test_dynamic_loading__no_sleeps__tc_009.py  test_files__upload_download__tc_008.py
tests/web/parabank/: test_register__login__tc_010.py  test_transfer__negative_amount__tc_011.py
tests/web/saucedemo/: test_accessibility__inventory_scan__tc_013.py  test_agent__guardrails_time_domain__tc_018.py  test_agent__guided_checkout__tc_015.py  test_checkout__happy_path__tc_001.py  test_login__negative_password__tc_002.py  test_mobile__cart_accessibility__tc_004.py  test_sorting__pdp_cart_badge__tc_003.py
utils/: ct_report.py  data.py  logger.py  sauce_simulator.py  settings.py
