[build-system]
requires = ["setuptools==70.0.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-ai-browser-use"
version = "0.1.0"
description = "Playwright automation framework with AI browser agent support"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Current User" }]
dependencies = [
  "playwright==1.55.0",
  "pytest==8.4.2",
  "pytest-xdist==3.8.0",
  "pytest-html==4.1.1",
  "pytest-retry==1.7.0",
  "pytest-rerunfailures==15.1",
  "pytest-metadata==3.0.0",
  "pytest-playwright==0.7.1",
  "pytest-playwright-axe==4.10.3",
  "python-dotenv==1.0.1",
  "pydantic==2.7.4",
  "pydantic-settings==2.11.0",
  "langchain==0.3.27",
  "langchain-openai==0.3.33",
  "langchain-groq==0.3.8",
  "httpx==0.27.0",
  "requests==2.32.3",
  "aiofiles==23.2.1",
  "tenacity==8.3.0",
  "jsonschema==4.22.0",
  "pytest-asyncio==0.23.6",
  "freezegun==1.5.1"
]

[project.optional-dependencies]
dev = [
  "mypy==1.10.0",
  "ruff==0.4.7",
  "black==24.4.2",
  "isort==5.13.2",
  "bandit==1.7.8",
  "detect-secrets==1.4.0",
  "types-requests==2.32.0.20240523",
  "types-jsonschema==4.20.0.0"
]

[tool.setuptools]
packages = [
  "agents",
  "ai",
  "configs",
  "flows",
  "fixtures",
  "pages",
  "utils"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "C4", "T20", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_return_any = true
exclude = [
  "reports/",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --maxfail=1"
minversion = "8.0"
markers = [
  "regression: marks regression suite",
  "smoke: marks smoke tests",
  "ai_live: marks live agent tests",
  "ai_stub: marks stub agent tests",
  "e2e: end-to-end scenarios",
  "api: api tests",
  "visual: visual validation",
  "a11y: accessibility tests",
  "negative: negative cases",
  "edge: edge cases",
  "resilience: resilience tests",
  "device: device-specific",
  "security: security and guardrail",
  "control: guardrail or control focus",
  "files: file upload/download scenarios",
  "graphql: GraphQL API validation",
  "flaky: quarantined flaky tests"
]

[tool.coverage.run]
branch = true
source = ["tests", "pages", "flows", "agents", "ai", "fixtures", "utils"]
